# derakht_backend

./: .coveragerc  .dockerignore  .gitignore  API_SPEC_STORY_ORIENTATION_SIZE.md  AUDIT_REPORT.md  CLAUDE.md  Dockerfile  FRONTEND_CHANGES_PR34.md  LOGGING.md  MANUAL_PAYMENT_FLOW.md  README.md  REFACTOR_PLAN.md  SEARCH_API.md  SECURITY.md  SEO_IMPLEMENTATION_SUMMARY.md  STORY_COLOR_API_CHANGES.md  TESTING.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_README.md  TESTING_STRATEGY.md  conftest.py  dev.Dockerfile  docker-compose.dev.yml  docker-compose.yml  entrypoint  manage.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.sh
.github/workflows/: main.yml  tests.yml
blog/: admin.py  category_serializer.py  models.py  panels.py  serializers.py  storages.py  urls.py  views.py  wagtail_hook.py  wagtail_hooks.py
blog/migrations/: 0001_initial.py  0002_blogpagegalleryimage.py  0002_blogpost_alternative_titles.py  0003_blogpost_featured_blogpost_reading_time.py  0003_blogposttag_blogpost_tags.py  0004_blogpost_header_image_blogpost_subtitle_and_more.py  0004_blogpost_hero_alter_blogpost_featured.py  0005_blogcategory_blogpost_categories.py  0006_alter_blogpost_categories.py  0007_blogpost_related_posts.py  0008_alter_blogpost_intro_alter_blogpost_subtitle.py  0009_add_seo_fields.py  0009_blogcategory_meta_description_and_more.py
blog/templatetags/: jalali_tags.py  navigation_tags.py
content/: models.py  serializers.py  urls.py  views.py
content/migrations/: 0001_initial.py
core/: admin.py  exceptions.py  logging_utils.py  middleware.py  models.py  serializers.py  urls.py  utils.py  views.py  wagtail_hooks.py
core/migrations/: 0001_initial.py  0002_enable_pg_trgm.py  0003_comment.py  0004_rename_core_commen_content_idx_core_commen_content_9a4d39_idx_and_more.py
core/services/: search.py
derakht/: asgi.py  local_settings.py.example  settings.py  settings_test.py  urls.py  views.py  wsgi.py
nginx/: default.conf
shop/: admin.py  apps.py  choices.py  managers.py  models.py  order_management.py  signals.py  tasks.py  urls.py  wagtail_hooks.py
stories/: admin.py  middleware.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
story/: admin.py  serializers.py  views.py
templates/: base.html  sitemap.xml
user/: models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
(+108 files in other folders)
